# IUE_CourseCompass

./: .env.example  .gitignore  LICENSE  Makefile  README.md  analyze_courses.py  evaluation_results.json  evaluation_results_fixed.json  get_question_data.py  pyproject.toml  verify_answers.py
.github/workflows/: ci.yml
config/: settings.yaml
data/: evaluation_questions.json
data/processed/: courses.jsonl
data/questions/: sample_questions.json
src/iue_coursecompass/: __init__.py
src/iue_coursecompass/app/: __init__.py  streamlit_app.py
src/iue_coursecompass/cli/: __init__.py  main.py
src/iue_coursecompass/evaluation/: __init__.py  metrics.py  questions.py  questions_v1.yaml  runner.py
src/iue_coursecompass/indexing/: __init__.py  embeddings_base.py  embeddings_gemini.py  embeddings_sbert.py  manifest.py  vector_store.py
src/iue_coursecompass/ingestion/: __init__.py  chunker.py  cleaner.py  parser.py  scraper.py
src/iue_coursecompass/rag/: __init__.py  curriculum.py  generator.py  grounding.py  prompts.py  quantitative.py  retriever.py
src/iue_coursecompass/shared/: __init__.py  config.py  logging.py  schemas.py  utils.py
tests/: __init__.py  conftest.py  test_evaluation.py  test_indexing.py  test_ingestion.py  test_rag.py
