[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iue-coursecompass"
version = "0.1.0"
description = "RAG system for IUE Faculty of Engineering course/curriculum semantic search and comparison"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "IUE CourseCompass Team" }
]
keywords = ["rag", "retrieval-augmented-generation", "education", "course-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tenacity>=8.2.0",
    
    # Data contracts & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Configuration
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # Embeddings - SBERT (default, free)
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    
    # Embeddings & LLM - Gemini
    "google-genai>=0.3.0",
    "google-generativeai>=0.8.0",  # For LLM generation
    
    # Vector database
    "chromadb>=0.4.22",
    
    # CLI
    "typer[all]>=0.9.0",
    
    # GUI
    "streamlit>=1.29.0",
    
    # Utilities
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0.12",
    "types-tqdm>=4.66.0",
]

[project.scripts]
coursecompass = "iue_coursecompass.cli.main:app"

[project.urls]
Homepage = "https://github.com/mirzaisi/IUE_CourseCompass"
Documentation = "https://github.com/mirzaisi/IUE_CourseCompass#readme"
Repository = "https://github.com/mirzaisi/IUE_CourseCompass"

[tool.hatch.build.targets.wheel]
packages = ["src/iue_coursecompass"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/evaluation",
    "/tests",
]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff - Fast Python linter
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["iue_coursecompass"]

# ─────────────────────────────────────────────────────────────────────────────
# Black - Code formatter
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
target-version = ["py311"]
line-length = 100

# ─────────────────────────────────────────────────────────────────────────────
# MyPy - Static type checker
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "chromadb.*",
    "streamlit.*",
    "google.genai.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Pytest - Testing framework
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/iue_coursecompass"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
